<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">算24点</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="name">昵称:</string>
    <string name="password">密码:</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="image">头像:</string>
    <string name="login">登录</string>
    <string name="unLogin">未登录</string>
    <string name="title_bar_txt">个人信息</string>
    <string name="set_image">设置头像</string>
    <string name="waiting">等待游戏开始。。。</string>
    <string name="ranking">本次游戏排名</string>
    <string name="rules">游戏规则有待开发。。。</string>
    <string name="menu_rules">游戏规则</string>
    <string name="local_rules">本地游戏规则:玩家需要把随机给出的四个数字进行运算，让结果等于24。在60秒内，玩家做对的题数越多，分数就越高。</string>
    <string name="initiate_rules">创建游戏规则：给出4个数字，所给数字均为有理数，用加、减、乘、除（可加括号）把给出的数算成24．每个数必须用一次且只能用一次，玩家必须快其他玩家做出来并且把正确结果发送给创建游戏的玩家才会赢得本题，进入下一题。所以这不仅需要玩家快速的运算能力，还需要良好的网络环境。每次游戏共有十道题，游戏结束后，会评出前三冠，并公布游戏比赛结果。</string>
    <string name="joingame_rules">加入游戏规则：给出4个数字，所给数字均为有理数，用加、减、乘、除（可加括号）把给出的数算成24．每个数必须用一次且只能用一次，玩家必须快其他玩家做出来并且把正确结果发送给创建游戏的玩家才会赢得本题，进入下一题。所以这不仅需要玩家快速的运算能力，还需要良好的网络环境。每次游戏共有十道题，游戏结束后，会评出前三冠，并公布游戏比赛结果。</string>

</resources>